# document_scanner

./: CMakeLists.txt  DataLoader.py  Line.py  Point.py  main.cpp  main.py  preprocessing.cpp  preprocessing.h  utils.cpp  utils.h
